force-app/main/default/objects/ConfiguracaoEmailIntegracao__mdt/ConfiguracaoEmailIntegracao__mdt.object-meta.xml
<CustomObject>
    <description>Metadados de configurações dos emails de integrações do ERP.</description>
    <label>Configuracao Email Integracao</label>
    <pluralLabel>Configurações Emails Integracao</pluralLabel>
</CustomObject>