force-app/main/default/objects/ConfiguracaoEmailIntegracao__mdt/fields/Classe__c.field-meta.xml
<CustomField>
    <fullName>Classe__c</fullName>
    <description>Classe em que se encontra a chamada de email.</description>
    <inlineHelpText>Classe em que se encontra a chamada de email.</inlineHelpText>
    <label>Classe</label>
    <length>40</length>
    <type>Text</type>
</CustomField>