force-app/main/default/objects/ConfiguracaoEmailIntegracao__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Emails que recebem o email de sucesso das integrações.</description>
    <inlineHelpText>Emails que recebem o email de sucesso das integrações.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>