force-app/main/default/objects/ConfiguracaoEmailIntegracao__mdt/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <description>Método em que se encontra a chamada de email.</description>
    <inlineHelpText>Método em que se encontra a chamada de email.</inlineHelpText>
    <label>Método</label>
    <length>40</length>
    <type>Text</type>
</CustomField>