force-app/main/default/objects/ConfiguracaoEmailIntegracao__mdt/fields/TipoEmail__c.field-meta.xml
<CustomField>
    <fullName>TipoEmail__c</fullName>
    <description>Indica o tipo do email que sera recebido. Se será enviado diretamente ou por cópia.</description>
    <inlineHelpText>Indica o tipo do email que sera recebido. Se será enviado diretamente ou por cópia.</inlineHelpText>
    <label>TipoEmail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To</fullName>
                <default>true</default>
                <label>To</label>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>ReplyTo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>